Fix/image overflow (#59)
* correct overflow for safari

* also improve h3 to sans serif

* also h2

--- a/styles/_blog-post-container.scss
+++ b/styles/_blog-post-container.scss
@@ -9,8 +9,12 @@
         color: $black;
         font-family: sans-serif;
       }
+      h2 {
+        font-family: Geneva, Tahoma, sans-serif;
+      }
       h3 {
         color: $comboBlue;
+        font-family: sans-serif;
         a:link {
           color: $pink;
           text-decoration: none;
